--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <li>
                                 <h3>Hello Title</h3> 
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora perspiciatis, blanditiis praesentium delectus illum alias atque optio distinctio repudiandae maiores dignissimos, fuga rem eaque? Atque molestiae cum voluptatibus! Necessitatibus, at.</p>
-                                <a href="readmore">ReadMore</a>
+                                <a href="readmore"> ReadMore </a>
                             </li>
                             <li>
                                 <h3>Hello Title</h3> 
@@ -43,11 +43,11 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora perspiciatis, blanditiis praesentium delectus illum alias atque optio distinctio repudiandae maiores dignissimos, fuga rem eaque? Atque molestiae cum voluptatibus! Necessitatibus, at.</p>
                                 <a href="readmore">Readmore</a>
                             </li>
-                            <li>Hello Title 
+                            <li>
+                                <h3>Hello Title</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora perspiciatis, blanditiis praesentium delectus illum alias atque optio distinctio repudiandae maiores dignissimos, fuga rem eaque? Atque molestiae cum voluptatibus! Necessitatibus, at.</p>
                                 <a href="readmore">Readmore</a>
                             </li>
-                            
 
                         </ul>
                     </nav>
